<resources>
    <string name="app_name">HD Wallpaper</string>

    <!--<Admob App ID>-->
    <string name="admob_app_id">ca-app-pub-8570283586375547~9168758528</string>


    <string name="see_all">See All</string>
    <string name="latest_wallpaper">Latest</string>
    <string name="popular_wallpaper">Popular</string>
    <string name="category">Category</string>
    <string name="most_view">Most View</string>

    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="app_developer_by_Ingenious">App developer By : Ingenious</string>
    <string name="settings">Settings</string>
    <string name="logout">Profile</string>

    <string name="str_logout">Log Out</string>

    // login form string
    <string name="str_login_user_id">User Name</string>
    <string name="str_login_password">Password</string>

    <string name="str_btn_sign_in">Sign In</string>
    <string name="str_btn_sign_up">Sign Up</string>

    <string name="str_forgot_password">Forgot password</string>

    <string name="str_signin_title">WELCOME</string>
    <string name="str_signin_info">Fill all fields for Sign In to HD Wallpaper</string>


    // signup form
    <string name="str_signup_title">Sign Up</string>
    <string name="str_signup_info">Fill all fields for Sign Up to HD Wallpaper</string>
    <string name="str_input_name">Enter your name</string>
    <string name="str_input_fullname">Enter your Fullname</string>
    <string name="str_input_usrname">Enter your UserName</string>
    <string name="str_input_password">Enter your password</string>
    <string name="str_input_email">Enter your Email</string>
    <string name="str_input_password_repeat">Repeat your password</string>


    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="err_server">err server</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_is_not_available">Internet Connection is not available.</string>
    <string name="retey">RETEY</string>
    <string name="exit">exit</string>
    <string name="err_internet_not_conn">err internet</string>
    <string name="ok">Ok</string>
    <string name="see_more_btn_text">See more</string>
    <string name="error_ingenious_key">Error Ingenious key</string>
    <string name="create_ingenious_key">Create a new Ingenious key</string>

    <string name="dialog_text_no_ads_title">Turn Off ads</string>
    <string name="dialog_text_no_ads_description">Use App more free without ads</string>
    <string name="description_subsribte">With our pack. You can enjoy an ad-free experiance . and focus on the  essential!</string>
    <string name="image">Image</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="ratings">Ratings</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="rate">Rate</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="tags">Tags</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="loading">Loading..</string>
    <string name="downloading_wallpaper">Downloading Wallpaper..</string>
    <string name="please_wait">Please Wait..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="share_wallpaper">Share Wallpaper</string>
    <string name="please_try_again">Please try again</string>
    <string name="wallpaper_already_saved">Wallpaper Already Saved</string>
    <string name="get_more_wall">Get more amazing wallpapers, download now</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen and Lock Screen</string>
    <string name="err_set_wall">Error when setting wallpaper</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="server_no_conn">Server not connected</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>
    <string name="types">Types</string>
    <string name="comments">Comments</string>
    <string name="report_message">Enter your text here</string>
    <string name="rate_this_wall">Rate this Wallpaper</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="submit">Submit</string>
    <string name="internet_not_connected">Please connect to internet</string>
    <string name="enter_rating">Please enter rating</string>
    <string name="latest">latest</string>
    <string name="popular">popular</string>
    <string name="rated">rated</string>
    <string name="error_package_name">Error Package Name</string>
    <string name="favourite">Favourite</string>
    <string name="gif">GIF</string>
    <string name="home">Home</string>
    <string name="get_more_gif">more  gif</string>
    <string name="gif_saved">gif saved</string>
    <string name="gif_already_saved">gif already saved</string>
    <string name="downloading_gif">Downloading Gif</string>
    <string name="rate_this_gif">Rate This Gif</string>
    <string name="about">About</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="favourite_gif">Favourite GIF</string>
    <string name="nav_header_line">"HD "</string>
    <string name="recent">Recent</string>
    <string name="open">Open Bottom Sheet</string>

</resources>
