<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/latest" />

        <item
            android:id="@+id/nav_most_view"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/most_view" />

        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/ic_folder_white_24dp"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_gif"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/gif" />

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/favourite" />

        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_cog"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/profile"
            android:title="@string/logout" />

    </group>


</menu>