<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="match_parent"
    tools:context="com.ingenious.hdwallpapers.Activity.Signup">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_below="@id/imgLogo"
                android:id="@+id/txtSignUpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title"
                android:gravity="center"
                android:text="@string/str_signup_title"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/txtSignUpInfo"
                android:layout_below="@id/txtSignUpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_signup_info"
                android:gravity="center"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSignUpInfo"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/colorETLayoutHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_input_fullname"
                    android:inputType="text|textPersonName"
                    style="@style/MyEditTextStyle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wrapper_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/colorETLayoutHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_input_email"
                    android:inputType="textEmailAddress"
                    style="@style/MyEditTextStyle"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wrapper_email"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/colorETLayoutHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_input_usrname"
                    android:inputType="text|textPersonName"
                    style="@style/MyEditTextStyle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wrapper_password"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/colorETLayoutHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_input_password"
                    android:inputType="textPassword"
                    style="@style/MyEditTextStyle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/buttonsign"
                android:layout_below="@+id/wrapper_confirm_password"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:theme="@style/Button.Primary"
                android:text="@string/str_btn_sign_up"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignUp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="#000"
                android:text="@string/str_btn_sign_in"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/progressBar_cyclic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:layout_marginTop="600dp"
                android:visibility="gone"
                android:layout_marginLeft="190dp" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>



</FrameLayout>