<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="16dp"
    app:cardElevation="16dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        android:background="?BackgroundColor"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/colorAccent_Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/rating"
                android:textColor="#fff"
                android:textSize="18sp" />

            <com.ingenious.library.IconImageView
                android:id="@+id/iv_rate_close"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:padding="6dp"
                android:tint="#fff"
                android:src="@drawable/ic_close_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rate_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="?Titel_2"
                android:text="@string/rate_this_wall"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/rating_add"
                style="@style/RatingBar_Wall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:max="5"
                android:numStars="5"
                android:theme="@style/RatingBar_Wall" />


            <EditText
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:id="@+id/et_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?Boder"
                android:minLines="4"
                android:maxLines="5"
                android:gravity="top"
                android:padding="12dp"
                android:hint="@string/report_message"
                android:textColor="?Titel_1"
                android:textSize="14sp"
                android:background="@drawable/bg_round_border"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="35dp"
                android:background="?Boder" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_submit_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="Submit"
                android:textColor="?BackgroundColor"
                app:backgroundTint="?BackgroundTint" />

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>